--- a/projetos/lixo_ao_alvo/jogo.html
+++ b/projetos/lixo_ao_alvo/jogo.html
@@ -157,8 +157,8 @@
             game.load.image("bola", "objetos/bola.png");
             game.load.image("balao", "objetos/balao.png");
             game.load.image("heart", "fundos/heart.png");
-            game.load.spritesheet("barra", "objetos/barra.png", 275, 17);
-            game.load.spritesheet("pont", "objetos/ponteiro.png", 6, 17);
+            game.load.spritesheet("barra", "objetos/Barra.png", 275, 17);
+            game.load.spritesheet("pont", "objetos/Ponteiro.png", 6, 17);
             game.load.spritesheet("cannon", "objetos/cannonG.png", 138, 136);
             game.load.spritesheet("amarela", "objetos/Amarelo.png");
             game.load.spritesheet("azul", "objetos/Azul.png");
