remove not used image

--- a/projetos/lixo_ao_alvo/jogo.html
+++ b/projetos/lixo_ao_alvo/jogo.html
@@ -153,7 +153,7 @@
             
             game.load.image("background", "fundos/background.png");
             game.load.image("telao", "fundos/telao.png")
-            game.load.image("platform", "http://examples.phaser.io/assets/sprites/platform.png");
+            //game.load.image("platform", "http://examples.phaser.io/assets/sprites/platform.png");
             game.load.image("bola", "objetos/bola.png");
             game.load.image("balao", "objetos/balao.png");
             game.load.image("heart", "fundos/heart.png");
